# quill

./: .gitignore  AUDIT-FIX-PLAN.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINISH-STATUS.md  LAUNCH.md  LICENSE  NOTICE  README.md  SECURITY.md  action.yml  pyproject.toml  server.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  missed_dangerous_action.md
.github/workflows/: ci.yml  notari-check.yml  quill-check.yml  release.yml
ci-deferred/: ci.yml.deferred
docs/: HOOK-VS-PROXY.md  LAUNCH-DRY-RUN-0.3.0.md  LEARNING-LOOP.md  PRODUCT.md  QUICKSTART.md  SECURITY-MODEL.md  TESTING.md  byo-agent.md  clients.md  distribution.md  review-prompt-r9.md  secure-workflow.yml
docs/guide/: quill-guide.md
docs/marketing/: aiuc-1-mapping.md  coding-agent-incident-recovery.md  cve-2025-59536-mitigation.md  engagement-terms-template.md  eu-ai-act-august-2026-readiness.md  messaging-guide.md  prompt-injection-defense.md  substack-draft-disaster-to-deadline.md  why-quill-vs-others.md
docs/marketing/future-loomiq-saas/: README.md
docs/marketing/future-loomiq-saas/landing-page/: index.html
docs/marketing/outreach/: auditor-and-insurer-emails.md
docs/research/: aegis-comparison-2026-05.md  agent-trust-infra-2026-05.md  cash-path-2026-05.md  hardware-attested-approvals-2026-05.md  mcp-schema-passthrough-2026-05.md  polish-and-launch-2026-05.md  quill-explainer-and-strategy-2026-06.md  universal-adapter-strategy-2026-05.md
examples/: change_control_demo.sh  multi_agent_demo.py
experiments/: README.md  _quill_shim.py  agentdojo_harness.py  agentdojo_scenarios.json  render_artifacts.py  run_experiment.sh  scenarios.py  vibe_coder_harness.py
infra/cf-worker/: README.md  package.json  schema.sql  wrangler.toml
infra/cf-worker/src/: index.ts
infra/supabase/: README.md
infra/supabase/functions/analyze/: index.ts
infra/supabase/functions/ingest/: index.ts
infra/supabase/sql/: 0001_init.sql
native/quill-esf/: README.md  build.sh
native/quill-esf/QuillESF/: Info.plist  Policy.swift  PolicyCore.swift  QuillESF.entitlements  main.swift
native/quill-esf/apple-request/: REQUEST.md
native/quill-esf/tests/: PolicyTests.swift
scripts/: notari-passport.sh  quill-passport.sh  verify_launch_readiness.py
src/notari/: __init__.py  __main__.py  approvals.py  attest.py  audit.py  audit_summary.py  bridge.py  cli.py  config.py  contract.py  controls.toml  decay.py  doctor.py  errors.py  events.py  explain.py  explain_html.py  exports.py  githook.py  github_review.py  hints.py  hints.toml  insights.py  integrate.py  journal.py  learn.py  learning.py  lessons.py  onboard.py  otel.py  overnight.py  passport.py  paths.py  pause.py  perimeter.py  pinning.py  policy.py  prompt.py  prompt_injection.py  provenance.py  (+16 more)
src/notari/adapters/: __init__.py  claude_code.py  cursor.py
src/quill/: __init__.py  __main__.py  approvals.py  attest.py  audit.py  audit_summary.py  bridge.py  cli.py  code_scan.py  config.py  contract.py  controls.toml  decay.py  doctor.py  errors.py  esf.py  events.py  explain.py  explain_html.py  exports.py  githook.py  github_review.py  harness.py  hints.py  hints.toml  insights.py  integrate.py  journal.py  learn.py  learning.py  lessons.py  notifications.py  notify.py  onboard.py  otel.py  overnight.py  passport.py  paths.py  pause.py  perimeter.py  (+25 more)
src/quill/_vendor/: __init__.py  proxy_factory.py
src/quill/adapters/: __init__.py  claude_code.py  cursor.py
tests/: conftest.py  test_action_wrapper.py  test_adapter_imports.py  test_approvals.py  test_attest.py  test_audit.py  test_audit_fixes_tier0.py  test_audit_fixes_tier1.py  test_audit_fixes_tier2.py  test_audit_summary.py  test_auto_promote.py  test_bench_hot_path.py  test_block_secrets_config.py  test_bypass_mode.py  test_change_control.py  test_classified_by.py  test_classify_command.py  test_claude_hook.py  test_cli_integration.py  test_code_scan.py  test_contract_expiry.py  test_cursor_hook.py  test_decay.py  test_determinism.py  test_diff_binary_rename.py  test_diff_quoted_paths.py  test_disable_auth.py  test_doc_counts.py  test_esf.py  test_explain.py  test_exports.py  test_false_positives_2026_06.py  test_first_run_quickstart.py  test_force_push_scoping.py  test_gitattributes_secret.py  test_gitattributes_surface.py  test_githook.py  test_github_review.py  test_harness_replay.py  test_init_readiness.py  (+52 more)
web/: architecture.html  decision-plane.html  index.html  vercel.json
web/demo/: record-demo.sh
