[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "quill"
version = "0.2.0a1"
description = "An MCP proxy that gates risky AI actions, pauses high-risk ones for a human, and keeps a tamper-evident audit log."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Manu Marri" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "ai-agents",
    "agent-governance",
    "human-in-the-loop",
    "audit",
    "security",
    "claude-code",
    "cursor",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "anyio>=4.4",
    "pydantic>=2.7",
    "structlog>=24.1",
    "rich>=13.7",
    "typer>=0.12",
    "mcp>=1.0",
    "textual>=0.85",
]

[project.optional-dependencies]
keyring = ["keyring>=24"]
postgres = ["asyncpg>=0.29"]
# Touch-ID-gated approvals on macOS. Optional because the binding is
# Apple-platform-only; on Linux/Windows the typed-token flow remains
# the only option. Quill auto-detects availability at runtime.
touchid = [
    "pyobjc-framework-LocalAuthentication>=12.0,<13; sys_platform == 'darwin'",
]
# OpenTelemetry GenAI semconv emission. Optional because the OTel SDK is
# ~450 KB pure Python + a 1.5 MB protobuf wheel. Audit log remains the
# authoritative store; OTel is observability tooling on top.
otel = [
    "opentelemetry-api>=1.27,<2",
    "opentelemetry-sdk>=1.27,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.27,<2",
]
all = ["quill[keyring,postgres,touchid,otel]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.100",
    "syrupy>=4.6",
    "ruff>=0.5",
    "mypy>=1.10",
    "pyright>=1.1.370",
    "pip-audit>=2.7",
]

[project.scripts]
quill = "quill.cli:app"

[project.urls]
Homepage = "https://github.com/manumarri-sudo/quill"
Documentation = "https://github.com/manumarri-sudo/quill#readme"
Source = "https://github.com/manumarri-sudo/quill"
Changelog = "https://github.com/manumarri-sudo/quill/blob/main/CHANGELOG.md"
Issues = "https://github.com/manumarri-sudo/quill/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/quill"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle, pyflakes, warnings
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # bugbear
    "C4",            # comprehensions
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "S",             # bandit (security)
    "ANN",           # annotations
    "PTH",           # pathlib
    "PL",            # pylint
    "TCH",           # type-checking
    "TID",           # tidy-imports
]
ignore = [
    "ANN101", "ANN102",   # self / cls annotations (deprecated)
    "ANN002", "ANN204", "ANN401",  # *args / dunder / Any - not actually bugs
    "PLR0911", "PLR0913", # too many returns / args
    "S101",               # asserts in tests are fine
    "S105",               # false positive on the PASS/WARN/FAIL color constants
    "S603", "S607",       # subprocess.run with arg list, no shell - safe
    "S310",               # urlopen for telemetry endpoint is intentional
    "TC001", "TC002", "TC003",  # type-checking import gymnastics, not worth it
    "RUF001", "RUF012", "RUF059",  # mostly false positives in this codebase
    "N801", "N806", "N818",  # naming nitpicks
    "UP036", "UP042",     # py3.11-fallback shims + str-enum migration
    "C416", "SIM103", "SIM105",  # cosmetic
    "PTH123",             # open() instead of Path.open() is sometimes clearer
    "E741",               # `l` for line, etc - not ambiguous in context
    "PLC0415",            # deferred imports inside functions - used to avoid circular deps
    "PLR0912", "PLR0915", # too many branches / statements - complexity gates
    "PLR2004",            # magic-value-comparison (e.g. `x == 200`) - common in tests
    "S110",               # try-except-pass for best-effort cleanup
    "E701", "E702",       # multiple statements on one line - fine in compact dispatch
    "E501",               # line too long - handled by formatter, not always reachable
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S", "PL"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
warn_unreachable = true
warn_return_any = true
disallow_any_explicit = true
files = ["src/quill"]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true

[tool.pyright]
include = ["src/quill"]
typeCheckingMode = "strict"
pythonVersion = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=quill",
    "--cov-report=term-missing",
    # Threshold covers the kernel (audit/policy/decay/telemetry/config/proxy/
    # adapters/errors). Presentation layer (cli/tui/watch/tree/doctor/journal/
    # session/prompt) is excluded via [tool.coverage.run] omit; those need
    # integration tests, not unit ones.
    "--cov-fail-under=75",
]
markers = [
    "bench: performance benchmarks (deselect with '-m \"not bench\"')",
    "integration: integration tests with real subprocesses",
]

[tool.coverage.run]
source = ["src/quill"]
branch = true
omit = [
    "src/quill/_version.py",
    # Presentation layer: needs integration / TUI tests, not unit tests.
    "src/quill/cli.py",
    "src/quill/tui.py",
    "src/quill/watch.py",
    "src/quill/tree.py",
    "src/quill/doctor.py",
    "src/quill/journal.py",
    "src/quill/session.py",
    "src/quill/prompt.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
